Add css static file

--- a/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
+++ b/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
@@ -1,1 +1,16 @@
-testing, testing...
+{% load static %}
+
+<html>
+<head>
+  <title>If It's Cool</title>
+  <meta charset="utf-8">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="{% static 'comingsoon/comingsoon.css' %}">
+</head>
+<body>
+
+  <p>testing, testing...</p>
+
+</body>
+</html>
