Add html template with logo and words

--- a/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
+++ b/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 
-  <p>testing, testing...</p>
+  <img class="main-img" src="{% static 'comingsoon/logo.jpg' %}" alt="If It's Cool">
+  <p class="coming-soon">COMING SOON</p>
 
 </body>
 </html>
