Small styling (added rows)

--- a/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
+++ b/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
@@ -12,15 +12,15 @@
 </head>
 <body>
 <div class="container">
-  <header>
+  <header class="row">
     <img class="main-img" src="{% static 'comingsoon/logo.jpg' %}" alt="If It's Cool">
   </header>
-  <div class="banner">
+  <div class="row banner">
     <h2 class="coming-soon">COMING SOON</h2>
   </div>
-  <div class="content">
+  <div class="row content">
     <p class="email-blurb">
-      Sign up to be the first to hear from us when we go live!
+      Sign up to be the first to hear from us when we go live
     </p>
     <form>
       <input type="text">
