--- a/ifitscool/comingsoon/static/comingsoon/comingsoon.css
+++ b/ifitscool/comingsoon/static/comingsoon/comingsoon.css
@@ -1,8 +1,5 @@
 body {
-  background-color: #777;
-}
-
-header {
+  background-color: #000;
 }
 
 .container {
@@ -12,7 +9,7 @@ header {
 }
 
 .banner {
-  background-color: #d33;
+  background-color: #fff;
 }
 
 .content {
@@ -25,7 +22,7 @@ header {
   padding: 8 0;
   margin: 0;
   font-weight: bold;
-  color: #fff;
+/*  color: #fff;*/
 }
 
 .email-blurb {
