Add background image to coming soon page

--- a/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
+++ b/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
@@ -7,25 +7,19 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Julius+Sans+One">
-  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-  <link rel="stylesheet" href="{% static 'comingsoon/comingsoon.css' %}">
+{#   <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'comingsoon/css/comingsoon.css' %}"> #}
 </head>
 <body>
 <div class="container">
   <header class="row">
-    <img class="main-img" src="{% static 'comingsoon/logo.jpg' %}" alt="If It's Cool">
+    <img class="main-img" src="{% static 'comingsoon/img/logo.jpg' %}" alt="If It's Cool">
   </header>
   <div class="row banner">
     <h2 class="coming-soon">COMING SOON</h2>
   </div>
   <div class="row content">
-    <p class="email-blurb">
-      Sign up to be the first to hear from us when we go live
-    </p>
-    <form>
-      <input type="text">
-      <input type="submit">
-    </form>
+    {% include 'comingsoon/subscribe.html' %}
   </div>
 </div>
 </body>
