--- a/ifitscool/comingsoon/static/comingsoon/css/comingsoon.css
+++ b/ifitscool/comingsoon/static/comingsoon/css/comingsoon.css
@@ -1,6 +1,6 @@
 body {
   background-color: #000;
-  background-image: url('../img/pexels-photo-70222.jpeg');
+  background-image: url('../img/pexels-photo-104952.jpeg');
   background-repeat: no-repeat;
   background-position:center;
   -webkit-background-size: cover;
@@ -17,7 +17,12 @@ body {
 .banner {
   max-width: 850px;
   margin: auto;
+  background: rgba(0,0,0,0.6)
 }
+
+/*.main-img {
+  opacity: 1;
+}*/
 
 /*.content {
   height: 100%;
@@ -29,6 +34,7 @@ body {
   padding: 8 0;
   margin: 0;
   font-weight: bold;
+  color: #000;
   text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
 }
 
@@ -37,3 +43,9 @@ body {
   font-family: 'Julius Sans One', sans-serif;
   text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
 }*/
+
+#mc_embed_signup{
+  clear: left;
+  font: 14px Helvetica, Arial, sans-serif;
+  width: 100%;
+}
