--- a/ifitscool/comingsoon/templates/comingsoon/subscribe.html
+++ b/ifitscool/comingsoon/templates/comingsoon/subscribe.html
@@ -3,7 +3,7 @@
 <div id="mc_embed_signup">
 <form action="//ifitscoolband.us15.list-manage.com/subscribe/post?u=4ecdfb0392315c8a2625c9967&amp;id=e3f7c79bc4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-    <label for="mce-EMAIL">Subscribe to our mailing list</label>
+    <label for="mce-EMAIL">Sign up to be the first to hear from us when we go live!</label>
     <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4ecdfb0392315c8a2625c9967_e3f7c79bc4" tabindex="-1" value=""></div>
