--- a/ifitscool/comingsoon/static/comingsoon/css/comingsoon.css
+++ b/ifitscool/comingsoon/static/comingsoon/css/comingsoon.css
@@ -46,3 +46,26 @@ body {
   width: 100%;
   color: #fff;
 }
+
+.social-media {
+  overflow: auto;
+  width: 160px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.social-media-li {
+  list-style-type: none;
+  float: left;
+}
+
+.social-media-icon {
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  font-size: 2em;
+}
+
+.social-media-icon:hover {
+  opacity: .7;
+}
