--- a/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
+++ b/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
@@ -18,9 +18,9 @@
       <img class="main-img" src="{% static 'comingsoon/img/logo.jpg' %}" alt="If It's Cool">
       <h2 class="coming-soon">COMING SOON</h2>
       <ul class="social-media">
-        <li class = "social-media-li"><a href="https://facebook.com/"><i class="social-media-icon fa fa-facebook-square"></i></a></li>
-        <li class = "social-media-li"><a href="https://twitter.com/"><i class="social-media-icon fa fa-twitter"></i></a></li>
-        <li class = "social-media-li"><a href="https://instagram.com/"><i class="social-media-icon fa fa-instagram"></i> </a></li>
+        <li class = "social-media-li"><a href="https://facebook.com/ifitscoolband"><i class="social-media-icon fa fa-facebook-square"></i></a></li>
+        <li class = "social-media-li"><a href="https://twitter.com/ifitscool"><i class="social-media-icon fa fa-twitter"></i></a></li>
+        <li class = "social-media-li"><a href="https://instagram.com/ifitscoolofficial"><i class="social-media-icon fa fa-instagram"></i> </a></li>
       </ul>
       {% include 'comingsoon/subscribe.html' %}
     </div>
