--- a/ifitscool/comingsoon/static/comingsoon/css/comingsoon.css
+++ b/ifitscool/comingsoon/static/comingsoon/css/comingsoon.css
@@ -1,6 +1,6 @@
 body {
   background-color: #000;
-  background-image: url('../img/pexels-photo-104952.jpeg');
+  background-image: url('../img/IMG_0600.jpg');
   background-repeat: no-repeat;
   background-position:center;
   -webkit-background-size: cover;
