--- a/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
+++ b/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
@@ -4,7 +4,7 @@
 <head>
   <title>If It's Cool</title>
   <meta charset="utf-8">
-  <meta name="description" content="">
+  <meta name="description" content="If It's Cool is an alternative rock band located in Northwest Indiana, just outside of Chicago.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Julius+Sans+One">
   <link rel="stylesheet" href="{% static 'font-awesome-4.7.0/css/font-awesome.min.css' %}">
