--- a/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
+++ b/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
@@ -25,6 +25,16 @@
       {% include 'comingsoon/subscribe.html' %}
     </div>
   </div>
+  <div class="row">
+    <footer class="col">
+      <p>
+        Want to get ahold of us?
+        <br>
+        Email the whole band at<a href="mailto:someone@example.com">band@ifitscoolband.com</a>!
+      </p>
+      <p class="copyright">Copyright &copy; 2017 If It's Cool</p>
+    </footer>
+  </div>
 </div>
 </body>
 </html>
