Changed mailto link to go to real email address

--- a/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
+++ b/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
@@ -30,7 +30,7 @@
       <p>
         Want to get ahold of us?
         <br>
-        Email the whole band at <a href="mailto:someone@example.com">band@ifitscoolband.com</a>!
+        Email the whole band at <a href="mailto:band@ifitscoolband.com">band@ifitscoolband.com</a>!
       </p>
       <p class="copyright">Copyright &copy; 2017 If It's Cool</p>
     </footer>
