--- a/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
+++ b/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
@@ -32,7 +32,7 @@
         <br>
         Email the whole band at <a href="mailto:band@ifitscoolband.com">band@ifitscoolband.com</a>!
       </p>
-      <p class="copyright">Copyright &copy; 2017 If It's Cool</p>
+      <p>Copyright &copy; 2017 If It's Cool</p>
     </footer>
   </div>
 </div>
