--- a/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
+++ b/ifitscool/comingsoon/templates/comingsoon/comingsoon.html
@@ -25,16 +25,14 @@
       {% include 'comingsoon/subscribe.html' %}
     </div>
   </div>
-  <div class="row">
-    <footer class="col">
-      <p>
-        Want to get ahold of us?
-        <br>
-        Email the whole band at <a href="mailto:band@ifitscoolband.com">band@ifitscoolband.com</a>!
-      </p>
-      <p>Copyright &copy; 2017 If It's Cool</p>
-    </footer>
-  </div>
+  <footer>
+    <p>
+      Want to get ahold of us?
+      <br>
+      Email the whole band at <a href="mailto:band@ifitscoolband.com">band@ifitscoolband.com</a>!
+    </p>
+    <p>Copyright &copy; 2017 If It's Cool</p>
+  </footer>
 </div>
 </body>
 </html>
