--- a/ifitscool/comingsoon/static/comingsoon/css/comingsoon.css
+++ b/ifitscool/comingsoon/static/comingsoon/css/comingsoon.css
@@ -18,7 +18,6 @@ body {
 .banner {
   max-width: 850px;
   margin: auto;
-  min-height: 100%;
 }
 
 .main-img {
@@ -70,6 +69,7 @@ body {
 }
 
 footer {
+  margin-top: 60px;
   font-size: .8em;
 }
 
